@@ -1,3 +1,6 @@
+[B]2.0.5[/B]
+- Fixed: Prevent language choices from interfering with IMDb ratings
+
 [B]2.0.4[/B]
 - Fixed: Moved IMDb ratings to prevent clearing buffers before GetActors
 
